--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		 <link rel="stylesheet" type="text/css" href="css/style12.css" />
 	</head>
 	<body>
 
@@ -93,7 +94,7 @@
 									<h2>Silicon Valley</h2>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
-										<li><a href="international.html" class="button">Let's Go!</a></li>
+										<li><a href="international.html" class="button">Lets Go!</a></li>
 									</ul>
 								</div>
 							</div>
