--- a/maroc.html
+++ b/maroc.html
@@ -13,6 +13,9 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
+    	<link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
+    	<link rel="stylesheet" type="text/css" href="assets/css/style12.css" />
 	</head>
 	<body>
 
@@ -34,7 +37,29 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">
+								<div class="container">
+        							<div class="content">
+            							<svg viewBox="0 0 2000 500">
+
+                							<!-- Symbol -->
+               									 <symbol id="s-text">
+               									     <text text-anchor="middle" x="50%" y="50%" dy=".35em">
+                        								MAROC
+               									     </text>
+               									 </symbol>
+									
+               									 <!-- Duplicate symbols -->
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+
+            							</svg>
+        							</div>
+    							</div>
+    						</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
