--- a/maroc.html
+++ b/maroc.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Generic - Hyperspace by HTML5 UP</title>
@@ -37,6 +33,9 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">
+								<!--======================
+								        Maroc Effect  
+								=========================-->
         							<div class="content">
             							<svg viewBox="0 0 1450 500">
                 							<!-- Symbol -->
@@ -55,6 +54,9 @@
 
             							</svg>
         							</div>
+        						<!--======================
+								        End Maroc Effect  
+								=========================-->
     						</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
