--- a/index.html
+++ b/index.html
@@ -44,42 +44,45 @@
 				<!-- quoi -->
 					<section id="quoi" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Un Hackathon c'est quoi ?</h2>
+							<p>Le mot Hackathon désigne à la fois le principe, le moment et le lieu d'un événement où un groupe de développeurs volontaires se réunissent pour faire de la programmation informatique collaborative, sur plusieurs jours. C'est un processus créatif fréquemment utilisé dans le domaine de l'innovation numérique.</p>
 							<div class="features">
 								<section>
+									<span class="icon major fa fa-cog fa-spin"></span>
+									<h3 style = "font-size: 24px;">Définition</h3>
+									<p style = "font-size: 20px, text-align: justify, text-justify: inter-word;">Contraction de « hack » et de « marathon », un Hackathon était, à l'origine, un rassemblement de développeurs ayant pour objectif de mener une session intensive de programmation informatique collaborative sur un laps de temps court (souvent un week-end ou au minimum entre 8 et 12 heures), sans interruption.</p>
+								</section>
+								<section>
+									<span class="icon major fa-book"></span>
+									<h3 style = "font-size: 24px;">Historique</h3>
+									<p style = "font-size: 20px, text-align: justify, text-justify: inter-word;">Le Hackathon est à l'origine un rassemblement de développeurs, généralement organisés en équipe, par ou autour d'un ou plusieurs porteur(s) de projet avec l’objectif commun de tester une idée et de produire un prototype d'application en quelques heures (principe du prototypage rapide). Sous forme de concours chronométré, l'équipe gagnante est généralement désignée par un jury à l’issue du temps imparti.</p>
+								</section>
+								<section>
 									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3 style = "font-size: 24px;">La Philosophie</h3>
+									<p style = "font-size: 20px, text-align: justify, text-justify: inter-word;">La « philosophie » du Hackathon prend sa source dans les idées des communautés de développeurs du mouvement Free/Libre Open Source Software. Que ce soit au travers d’évènements festifs tels que le Burning Man, ou plus studieux comme les barCamps, l’esprit communautaire est entretenu par le jeu consistant à relever des défis en équipe (émulation), et par le partage d'un jargon technique, d'une expertise voire d'un mode de vie particulier.</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fa-question-circle"></span>
+									<h3 style = "font-size: 24px;">Le But?</h3>
+									<p style = "font-size: 20px, text-align: justify, text-justify: inter-word;">Le hackathon est aussi une plate-forme d'apprentissage par et avec les pairs plus ou moins « informelle », un lieu où l'on apprend en créant et où l'on entretien un « savoir informel » ; L’expérimentation, et la sérendipité sont également très présentes dans ce type de manifestation.</p>
 								</section>
 								<section>
-									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fa-terminal"></span>
+									<h3 style = "font-size: 24px;">Comment ça se passe ?</h3>
+									<p style = "font-size: 20px, text-align: justify, text-justify: inter-word;">L'esprit d'émulation et la vitesse sont deux caractéristiques déterminantes de l’organisation. Le délai de réalisation extrêmement court introduit un stress positif dans les équipes. Il focalise les participants sur le résultat final. Il exclut tout ce qui pourrait retarder la réalisation : études de faisabilité, discussions stériles. Dans la prise de décisions, il redonne une place importante à l’instinct et contribue à maintenir la concentration des développeurs sur les tâches essentielles au fonctionnement général du projet. En imposant le travail de nuit, il confère un caractère exceptionnel à l’évènement, renforçant probablement le plaisir d’y participer.</p>
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fa-bolt"></span>
+									<h3 style = "font-size: 24px;">Les Critiques.</h3>
+									<p style = "font-size: 20px, text-align: justify, text-justify: inter-word;">Il est parfois reproché au Hackathon d'être un moyen d'enrôler ou de faire travailler des gens sans les payer et d'exploiter leur créativité au profit d'innovations éventuellement ensuite "récupérées" ou brevetées pour en tirer d'éventuels bénéfices financiers. C'est une des raisons qui font que certains participants apprécient que le résultat de leurs travaux soit ensuite disponible en open source et open data, afin qu'il reste dans le bien commun. La question de la propriété intellectuelle d'innovations ainsi produites en commun n'est pas toujours abordée.</p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
+							<ul class="actions vertical">
+								<li style = "font-size: 20px;"><a href="international.html" class="button special fit">Des Exemples de la Silicon Valley</a></li>
+							</ul>
+							<ul class="actions vertical">
+								<li style = "font-size: 20px;"><a href="maroc.html" class="button special fit">Des Exemples au Maroc</a></li>
 							</ul>
 						</div>
 					</section>
@@ -100,7 +103,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Le Maroc</h2>
@@ -111,77 +114,20 @@
 								</div>
 							</div>
 						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
 					</section>
 
 				
 				<!-- bot -->
-					<section id="bot" class="wrapper style1 fade-up">
+				<section id="bot" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-									<form method="post" action="#">
-										<div class="field half first">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phquoi</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
+							<h1>Hackathon</h1>
+							<p>Bienvenue dans le site qui vous explique le concept du Hackathon avec des <a href="exemples.html">exemples</a><br/> dans la <a href="international.html"> Silicon Valley </a> et même au <a href="maroc.html"> Maroc</a></p>
+							<ul class="actions">
+								<li><a href="#quoi" class="button scrolly">Commencer !</a></li>
+							</ul>
 						</div>
 					</section>
+					
 
 			</div>
 
