--- a/maroc.html
+++ b/maroc.html
@@ -10,7 +10,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
-    	<link rel="stylesheet" type="text/css" href="assets/css/style12.css" />
+    	<link rel="stylesheet" type="text/css" href="assets/css/style_maroc.css" />
 	</head>
 	<body>
 
@@ -25,7 +25,6 @@
 					</ul>
 				</nav>
 			</header>
-
 		<!-- Wrapper -->
 			<div id="wrapper">
 
