--- a/international.html
+++ b/international.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Generic - Hyperspace by HTML5 UP</title>
@@ -13,6 +9,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
+    	<link rel="stylesheet" type="text/css" href="assets/css/style_international.css" />
 	</head>
 	<body>
 
@@ -27,14 +25,38 @@
 					</ul>
 				</nav>
 			</header>
-
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">
+								<!--======================
+								        Maroc Effect  
+								=========================-->
+        							<div class="content">
+            							<svg viewBox="0 0 3050 500">
+                							<!-- Symbol -->
+               									 <symbol id="s-text">
+               									     <text text-anchor="middle" x="50%" y="50%" dy=".35em">
+                        								Silicon Valley
+               									     </text>
+               									 </symbol>
+									
+               									 <!-- Duplicate symbols -->
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+
+            							</svg>
+        							</div>
+        						<!--======================
+								        End Maroc Effect  
+								=========================-->
+    						</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
