--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<section id="bienvenue" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Hackathon</h1>
-							<p>Bienvenue dans le site qui vous explique le concept du Hackathon avec des <a href="exemples.html">exemples</a><br/> dans la <a href="international.html"> Silicon Valley </a> et même au <a href="maroc.html"> Maroc</a></p>
+							<p>Bienvenue dans le site qui vous explique le concept du Hackathon avec des <a href="#exemples">exemples</a><br/> dans la <a href="international.html"> Silicon Valley </a> et même au <a href="maroc.html">Maroc</a></p>
 							<ul class="actions">
 								<li><a href="#quoi" class="button scrolly">Commencer !</a></li>
 							</ul>
@@ -93,10 +93,10 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Silicon Valley</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2><a href="international.html">Silicon Valley &#9754;</a></h2>
+									<p style="font-size: 24px;">La oû tout à commencer et continu &Sigma;.</p>
 									<ul class="actions">
-										<li><a href="international.html" class="button">Lets Go!</a></li>
+										<li><a href="international.html" class="button">Lets Go! &#10004;</a></li>
 									</ul>
 								</div>
 							</div>
@@ -105,10 +105,10 @@
 							<a href="#" class="image"><img src="images/pic02.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Le Maroc</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2><a href="maroc.html">Le Maroc &#9754;</a></h2>
+									<p style="font-size: 24px;">Nôtre chère Pays &#9829;.</p>
 									<ul class="actions">
-										<li><a href="maroc.html" class="button">Yalah !</a></li>
+										<li><a href="maroc.html" class="button">Yalah ! &#10004;</a></li>
 									</ul>
 								</div>
 							</div>
@@ -119,10 +119,10 @@
 				<!-- bot -->
 				<section id="bot" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hackathon</h1>
-							<p>Bienvenue dans le site qui vous explique le concept du Hackathon avec des <a href="exemples.html">exemples</a><br/> dans la <a href="international.html"> Silicon Valley </a> et même au <a href="maroc.html"> Maroc</a></p>
-							<ul class="actions">
-								<li><a href="#quoi" class="button scrolly">Commencer !</a></li>
+							<h1 style="text-align: center; font-size: 45px;">ChatBot</h1>
+							<p style="text-align: center; font-size: 25px;"> Venez vous amusez avec notre ChatBot, qui est à la fois informatif et bien sûr génial.</p>
+							<ul class="actions vertical">
+								<li style = "font-size: 25px; text-align:center;"><a href="bot.html" class="button special">Hello &#9760;</a></li>
 							</ul>
 						</div>
 					</section>
@@ -133,7 +133,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<p style= "text-align: center; color:white; font-size: 20px;">Made with <span style="color: red; font-size: 30px;">&hearts;</span> by Omar M'HAIMDAT &amp; Nouamane MAJD</p>
 					</ul>
 				</div>
 			</footer>
