--- a/international.html
+++ b/international.html
@@ -33,8 +33,8 @@
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
-								        Maroc Effect  
-								=========================-->
+								   Silicon Valley Effect  
+								==========================-->
         							<div class="content">
             							<svg viewBox="0 0 3050 500">
                 							<!-- Symbol -->
@@ -53,9 +53,9 @@
 
             							</svg>
         							</div>
-        						<!--======================
-								        End Maroc Effect  
-								=========================-->
+        						<!--=========================
+								   End Silicon Valley Effect  
+								=============================-->
     						</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
