--- a/maroc.html
+++ b/maroc.html
@@ -15,8 +15,8 @@
 	<body>
 
 		<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+		<section id="sidebar">
+				<div class="inner">
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -24,7 +24,8 @@
 						<li><a href="elements.html">Elements</a></li>
 					</ul>
 				</nav>
-			</header>
+			</div>
+			</section>
 		<!-- Wrapper -->
 			<div id="wrapper">
 
