--- a/maroc.html
+++ b/maroc.html
@@ -2,14 +2,13 @@
 
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>HACKATHON-MAROC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css" />
     	<link rel="stylesheet" type="text/css" href="assets/css/style_maroc.css" />
 	</head>
 	<body>
@@ -19,9 +18,11 @@
 				<div class="inner">
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="index.html">Accueil</a></li>
+						<li><a href="#maroc" class="active">MAROC</a></li>
+						<li><a href="#ensa">ENSA de Khouribga</a></li>
+						<li><a href="#aku">Al Akhawayn University</a></li>
+						<li><a href="#hcp">HCP MAROC</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -30,18 +31,19 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="maroc" class="wrapper">
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
 								        Maroc Effect  
 								=========================-->
+								<section>
         							<div class="content">
-            							<svg viewBox="0 0 2000 500">
+            							<svg viewBox="0 0 2200 800">
                 							<!-- Symbol -->
                									 <symbol id="s-text">
                									     <text text-anchor="middle" x="50%" y="50%" dy=".35em">
-                        								MAROC
+                        								ensa
                									     </text>
                									 </symbol>
 									
@@ -54,6 +56,46 @@
 
             							</svg>
         							</div>
+        						</section>
+        						<!--======================
+								        End Maroc Effect  
+								=========================-->
+
+    						</h1>
+							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
+							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+						</div>
+					</section>
+
+			<h1 class="major"></h1>
+					<!-- ENSA -->
+					<section id="ensa" class="wrapper">
+						<div class="inner">
+							<h1 class="major">
+								<!--======================
+								        Maroc Effect  
+								=========================-->
+								<div>
+        							<div class="content">
+            							<svg viewBox="0 0 2200 800">
+                							<!-- Symbol -->
+               									 <symbol id="s-text">
+               									     <text text-anchor="middle" x="50%" y="50%" dy=".35em">
+                        								ensa
+               									     </text>
+               									 </symbol>
+									
+               									 <!-- Duplicate symbols -->
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+               									 <use xlink:href="#s-text" class="text"></use>
+
+            							</svg>
+        							</div>
+        						</div>
         						<!--======================
 								        End Maroc Effect  
 								=========================-->
@@ -67,10 +109,10 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
+			<footer id="footer" class="wrapper style2-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<p style= "text-align: center; color:white; font-size: 20px;">Made with <span style="color: red; font-size: 30px;">&hearts;</span> by Omar M'HAIMDAT &amp; Nouamane MAJD</p>
 					</ul>
 				</div>
 			</footer>
