--- a/maroc_ensa.html
+++ b/maroc_ensa.html
@@ -67,7 +67,7 @@
 
 							<!--Video ENSA OPEN SOURCE-->
 
-							<span><iframe width="990" height="562" src="https://www.youtube.com/embed/pPJBHT45Evc" allowfullscreen></iframe></span>
+							<div class="video-container"><iframe width="990" height="562" src="https://www.youtube.com/embed/pPJBHT45Evc" frameborder="0" allowfullscreen></iframe></span>
 
 							<!-- END  Video ENSA OPEN SOURCE-->
 
