--- a/international_dropbox.html
+++ b/international_dropbox.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>SILICON VALLEY</title>
+		<title>Dropbox</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,8 +19,8 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Accueil</a></li>
-						<li><a href="international.html" class="active">Silicon Valley</a></li>
-						<li><a href="international_dropbox.html">Dropbox</a></li>
+						<li><a href="international.html">Silicon Valley</a></li>
+						<li><a href="international_dropbox.html" class="active">Dropbox</a></li>
 						<li><a href="international_airbnb.html">AirBnb</a></li>
 						<li><a href="international_microsoft.html">Microsoft</a></li>
 						<li><a href="international_facebook.html">Facebook</a></li>
@@ -36,15 +36,15 @@
 						<div class="inner">
 							<h1 class="major">
 								<!--======================
-								   Silicon Valley Effect  
+								   Dropbox Effect  
 								=========================-->
 								<section>
         							<div class="content">
-            							<svg viewBox="0 0 5000 800">
+            							<svg viewBox="0 0 4200 800">
                 							<!-- Symbol -->
                									 <symbol id="s-text">
                									     <text text-anchor="middle" x="50%" y="50%" dy=".35em">
-                        								Silicon Valley
+                        								dropbox
                									     </text>
                									 </symbol>
 									
@@ -59,7 +59,7 @@
         							</div>
         						</section>
         						<!--========================
-								  End Silicon Valley Effect  
+								  End Dropbox Effect  
 								============================-->
 
     						</h1>
